# Hierarchical-monitors

./: .gitignore  Makefile.am  README.md  configure.ac  example_monitor
example/: example_monitor  test.c
src/: Makefile  Makefile.am  array.c  console.c  display.h  harray.c  hmon.c  hmon.h  hmon_array.c  hmon_debug.sh  hmon_matrix.c  hmon_utils.h  hmonitor.c  hwloc.c  hwloc_utils.c  internal.h  lstopo.c  main.c  monitor.c  monitor.h  monitor_utils.h  output.c  parser.y  performance.c  performance.h  plugin.c  plugin.h  proc.c  sampling.c  scanner.l  stats.c  stats.h  synchronize.c  utils.h
src/hmon/: harray.h  hmonitor.h
src/plugins/: performance_plugin.h  performance_utils.h
src/plugins/accumulate/: Makefile  Makefile.am  accumulate_monitor.c
src/plugins/fake/: Makefile  Makefile.am  fake_monitor.c  monitor_input.txt
src/plugins/hierarchical/: Makefile  Makefile.am  hierarchical_monitor.c  monitor_input.txt
src/plugins/learning/: Makefile  Makefile.am  Makefile~  brain.c  centroid_clustering.c  clustering.c  features.c  fourier.c  fourier.c~  kmean.c  learning.c  learning.h  learning.h~  linreg.c  perceptron.c  perceptron.c~  utils.c
src/plugins/maqao/: Makefile  Makefile.am  hardware_counters_list.txt  maqao.h  maqao_monitor.c  monitor_input.txt
src/plugins/papi/: Makefile  Makefile.am  PAPI_monitor.c  efield_monitor  monitor_input.txt
src/plugins/proc/: Makefile.am  lproc.c  proc.h  proc_monitor.c
src/plugins/proc/.deps/: proc_hmon_plugin_la-proc_monitor.Plo
src/plugins/proc/.libs/: proc_hmon_plugin.la  proc_hmon_plugin.lai  proc_hmon_plugin.so.0.0.0
src/plugins/stat_default/: Makefile  Makefile.am  stats.c
src/plugins/stat_gsl/: Makefile  stat.c  stat.c~
src/plugins/system/: Makefile.am  system_monitor.c
src/plugins/trace/: monitor_input.txt  monitor_trace_input.txt  monitor_trace_interface.h  monitor_trace_monitor.c  monitor_trace_reader.c
tests/: hmon_debug.sh
utils/: L2_miss.out  L2_miss.out~  hmon_plot  hmon_plot.R  monitor_live_plot.R
utils/R/: hmon_plot.R  nmeans.R
utils/python/: hmon_plot.py
